--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
                 id: 4, 
                 title: "統測期間減壓活動攤位", 
                 description: "周一鬆一鬆的午間活動，在本校的玻璃房設置攤位，透過體驗不同身心自我關懷方法(包括聆聽大自然的音樂、享用不同口感/味道的小食、揀選自己喜歡的香味精油等)，讓學生學習如何有效減壓及如何尋求協助。",
-                imageUrl: "image/stress-relief.jpg",
+                imageUrl: "image/stress-relief1.jpg",
                 month: "三月",
                 date: "2025/3/10"
             },
