--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
             },
             { 
                 id: 3, 
-                title: "義工服務", 
+                title: "鄰舍團年飯義工服務", 
                 description: "同學在西九文化區協助分發食物給家庭和長者，並與社區人士共享盆菜宴，又扮演財神，增添節日氣氛，較早前於午間時間做好準備。",
                 imageUrl: "image/volunteer-service.jpg",
                 month: "一月",
