--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
                             問卷調查
                         </h2>
                         <p class="text-lg text-gray-600 dark:text-gray-300 leading-relaxed">
-                            請參考左邊的活動相片圓環，然後填寫以下問卷 💝
+                            請參考活動相片圓環，然後填寫以下問卷 💝
                         </p>
                     </div>
                     
