--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@
                             問卷調查
                         </h2>
                         <p class="text-lg text-gray-600 dark:text-gray-300 leading-relaxed">
-                            請參考活動相片圓環，然後填寫以下問卷 💝
+                            請參考活動相片圓環，然後填寫以下問卷 💝<br>
+	                                        (如使用手機，建議橫向顯示)				
                         </p>
                     </div>
                     
