--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>輔導組午間活動問卷</title>
+    <title>輔導組午間及放學後活動問卷</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         /* Warm gradient background */
@@ -462,7 +462,7 @@
     <div class="container mx-auto p-6 relative z-10">
         <!-- Page Title - Same level for mobile -->
         <h1 class="page-title text-4xl font-bold text-center mb-12">
-            輔導組午間活動問卷
+            輔導組午間及放學後活動問卷
         </h1>
         
         <div class="main-container p-8 max-w-none mx-4">
@@ -470,7 +470,7 @@
                 <!-- Left Frame - Image Ring -->
                 <div class="w-2/5 warm-card p-8 rounded-2xl">
                     <h2 class="text-2xl font-bold mb-8 text-center bg-gradient-to-r from-pink-500 to-violet-500 bg-clip-text text-transparent">
-                        本年度午間活動巡禮
+                        本年度午間及放學後活動巡禮
                     </h2>
                     <div class="image-ring" id="imageRing">
                         <!-- Images and month labels will be positioned here by JavaScript -->
@@ -513,7 +513,7 @@
         <!-- Mobile-only layout (shown on mobile, hidden on desktop) -->
         <div class="mobile-ring-section hidden">
             <h2 class="text-xl font-bold mb-4 text-center bg-gradient-to-r from-pink-500 to-violet-500 bg-clip-text text-transparent">
-                本年度午間活動巡禮
+                本年度午間及放學後活動巡禮
             </h2>
             <div class="image-ring" id="mobileImageRing">
                 <!-- Images and month labels will be positioned here by JavaScript -->
